# notes20211230

./: docker.md  experience.md  markers.md  other_repo.md  placeholder  pointer.md  powershell.md  reviewNote.md
ENCH/: general.md  generalENCH.md  substrateNrustENCH.md
ETH/: NFT-market-video-1.md  NFT-market-video-2.md  NFT-market-video.md  eth.md  eth全栈总结.md  monkey-king-nft-auction.md  ramdomNoteETH.md
JS/: js.md  ramdomNote.md
Solidity/: errNote.md  ramdomNote.md  ramdomNoteSolidity.md  官方文档.md
VUE/: hbuilder&uniapp.md  ramdomNote.md  ramdomNoteVUE.md  vue-router.md
aichat/: aichat.md
cccs/: 01 early computing.md  02 电子计算机.md  03 布尔逻辑和逻辑门.md  05 算数逻辑单元.md  06 寄存器和内存.md  07 中央存储器cpu.md  08 指令和程序.md  10 早期的编程方式.md  12 编程基础-语句和函数.md  13 算法入门.md  15 阿兰图灵.md  16 软件工程.md  17 集成电路摩尔定律.md  20 文件系统.md  21 压缩.md
chatgpt/: ramdomNoteChatgpt.md
codes/: bank.sol  index.html  indexModified.html  main.css  test.sol  testDeliverContract.sol
noneComputer/: 一字马.md  托马斯.md
others/: chfs.md  chrome.md  cmd.md  css.md  git.md  linux.md  nginx.md  npm.md  potplayer.md  powershell.md  rust.md  vps.md  vscode.md  windows.md  wsl.md  yarn.md  域名解析dns.md  宝塔.md
rustLang/: 1.1 链接.md  11.3.md  3.3 函数.md  4.1 什么是所有权.md
rustYx/: 1.1 简介.md  2.1 猜数游戏，一次猜测.md  2.2 猜数游戏，生成数字.md
solidity8.0/: 07 全局变量.md  17 ownable合约.md  21 删除数组元素通过替换.md  30 事件.md  32 多线继承.md  35 可视范围.md  38 回退函数.md  43 低级call.md  45 工厂合约.md  47 哈希运算.md  48 验证签名unfinished.md  49 权限控制合约.md  52 erc20.md  56 英式拍.md  60 多重委托调用.md  61 abi解码.md  63 时间锁合约.md
subquery/: 01subquery入门.md
substrate/: links.md  polkadot.js.org.apps.md
substrateNrust/: glossary.md  metadata_origin_node_template.json  needToAsk.md  ramdomNoteRNS.md  ramdomNoteRust.md  substrateNrustLinks.md
substrateNrust/substrate进阶5期/codes/poe/: Cargo.toml
substrateNrust/substrate进阶5期/codes/poe/src/: libref.rs
substrate入门8期/: 2-3 node-template.md
尚硅谷vue/: 002 vue简介.md  004 搭建开发环境.md  005 hello案例.md  006 分析hello案例.md  007 模板语法.md  008 数据绑定.md  009 el与data的两种写法.md  010 mvvm.md  011 Object.defineProperty.md  013 vue中的数据代理.md  014 事件处理.md  015 事件修饰符.md  017 事件总结.md  018 姓名案例.md  (+10 more)
(+933 files in other folders)
